# naive-stanford-qa-squad

./: .dockerignore  Dockerfile  README.md  cli.py  compose.yaml  pyproject.toml
backend/: Dockerfile  README.md
backend/squad_backend/: manage.py
backend/squad_backend/question_answer_backend/: apps.py  urls.py  views.py
backend/squad_backend/question_answer_backend/templates/question_answer_backend/: index.html  main.html  try.html
backend/squad_backend/question_answer_backend/templates/question_answer_backend/lib/: navbar.html
backend/squad_backend/squad_backend/: asgi.py  settings.py  urls.py  wsgi.py
docs/: index.rst
model_api/: Dockerfile  README.md
model_api/model_api/api/: __init__.py  main.py
model_api/model_api/config/: config.py
model_api/model_api/model/: squad.py
notebooks/: Evaluate SQUAD.ipynb  SQUAD v2.0 EDA.ipynb
qa_squad/config/: configuration.py
qa_squad/data/: bidaf_datasets.py  distilbert_dataset.py  utils.py
qa_squad/models/: bidaf.py  layers.py  tokenizers.py
qa_squad/training/: dist_bert_trainer.py  trainer.py
