[tool.poetry]
name = "naive-stanford-qa-squad"
version = "0.1.0"
description = ""
authors = ["Nikolaos Panagiotou <npan1990@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
spacy = "^3.7.2"
pandas = "^2"
tqdm = "^4.66.1"
nltk = "^3.8.1"
click = "^8.1.7"
numpy = "<=1.25"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
